Fixes ZEN-2408 by forcing a width (required by css) and adding word wrap on those elements. reviewed by epowell.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@62108 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
+++ b/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
@@ -139,6 +139,10 @@ $include-missing-images: true;
         }
     }
 }
+#evdetail_props .event_message, .proptable_value div{
+    width:300px;
+    word-wrap: break-word;
+}
 
 /* ========================== */
 
